moving styles files into styles folder

--- a/site/index.html
+++ b/site/index.html
@@ -23,19 +23,19 @@
     
     <p>Switch between multiple themes using the buttons below.</p>
 
-    <button onclick="toggleTheme('purple.css')">
+    <button onclick="toggleTheme('styles/css/purple.css')">
         Purple
     </button>
 
-    <button onclick="toggleTheme('spotify.css')">
+    <button onclick="toggleTheme('styles/css/spotify.css')">
         Spotify
     </button>
 
-    <button onclick="toggleTheme('minecraft.css')">
+    <button onclick="toggleTheme('styles/css/minecraft.css')">
         Minecraft
     </button>
 
-    <button onclick="toggleTheme('old.css')">
+    <button onclick="toggleTheme('styles/css/old.css')">
         Old
     </button>
 
