changing css filepaths back to relative to allow for local development

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--- Add the style sheet. -->
-    <link id="theme" rel="stylesheet" type="text/css" href="/styles/css/purple.css" />
+    <link id="theme" rel="stylesheet" type="text/css" href="styles/css/purple.css" />
 
     <script>
         function toggleTheme(value) {
@@ -23,19 +23,19 @@
     
     <p>Switch between multiple themes using the buttons below.</p>
 
-    <button onclick="toggleTheme('/styles/css/purple.css')">
+    <button onclick="toggleTheme('styles/css/purple.css')">
         Purple
     </button>
 
-    <button onclick="toggleTheme('/styles/css/spotify.css')">
+    <button onclick="toggleTheme('styles/css/spotify.css')">
         Spotify
     </button>
 
-    <button onclick="toggleTheme('/styles/css/minecraft.css')">
+    <button onclick="toggleTheme('styles/css/minecraft.css')">
         Minecraft
     </button>
 
-    <button onclick="toggleTheme('/styles/css/old.css')">
+    <button onclick="toggleTheme('styles/css/old.css')">
         Old
     </button>
 
