--- a/secret/index.html
+++ b/secret/index.html
@@ -1,3 +1,3 @@
-<html><body><h1>Hawk tauh! Spit on that thang XD</h1></body></html>
+<html><body><h1>Hawk tauh! Spit on that thang XD LOL</h1></body></html>
 
 <p><a href="http://louieat.com/secret/test">Click me!!!</a></p>
